--- a/templates/login_festival.html
+++ b/templates/login_festival.html
@@ -19,12 +19,12 @@
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="remember" name="remember">
-                        <label class="form-check-label" for="remember">Remember me</label>
+                        <label class="form-check-label" for="remember">Ricordami</label>
                     </div>
                     <button type="submit" class="btn btn-primary w-100 mybuttoncolors">Login</button>
                 </form>
                 <p class="text-center mt-3">
-                    Don't have an account? <a href="{{ url_for('register') }}">Sign up</a>
+                    Non hai un account? <a href="{{ url_for('register') }}">Sign up</a>
                 </p>
             </div>
         </div>
