--- a/templates/register_festival.html
+++ b/templates/register_festival.html
@@ -30,15 +30,15 @@
                     <div class="mb-3">
                         <label for="role" class="form-label">Register as</label>
                         <select class="form-select" id="role" name="role" required>
-                            <option value="" selected disabled>Select your role...</option>
-                            <option value="participant">Participant</option>
-                            <option value="organizer">Organizer</option>
+                            <option value="" selected disabled>Scegli il tuo Ruolo...</option>
+                            <option value="participant">Partecipante</option>
+                            <option value="organizer">Organizzatore</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary w-100 mybuttoncolors">Register</button>
                 </form>
                 <p class="text-center mt-3">
-                    Already have an account? <a href="{{ url_for('login') }}">Login</a>
+                    Hai già un account? <a href="{{ url_for('login') }}">Login</a>
                 </p>
             </div>
         </div>
